syntax = "proto3";

package proto;

import "serviceresponse.proto";

service volume {
   rpc CreateVolume (Volume) returns (ServiceResponse) {}
   rpc GetVolume (Volume) returns (ServiceResponse) {}
   rpc DeleteVolume (Volume) returns (ServiceResponse) {}
   rpc PatchVolume (Volume) returns (ServiceResponse) {}
   rpc PutVolume (Volume) returns (ServiceResponse) {}
}

message Volume {
    string project_id = 1;
    string service_id = 2;
    string name = 3;
    string service_type = 4;
    string service_sub_type = 5;
    string status = 6;
    string token = 7;
    repeated string service_dependency_info = 8;
	VolumeAttr service_attributes = 9;
	string company_id = 10;
	string version = 12;
	string namespace = 13;
}

message VolumeAttr {
	string size = 1;
	string cloud = 2;
	string mount_path = 3;
	Parameter params = 4;
}

message Parameter {
	string type = 1;
	string replication_type = 2;
	string iops = 3;
	string plugin = 4;
	string sku_name = 5;
	string location = 6;
	string storage_account = 7;
}

